# taskflow

./: .env.example  .env.production  .gitignore  AUDIT-FINDINGS.md  BACKEND-TEST-PLAN.md  Backend (Rust)  CACHING-USAGE-GUIDE.md  CLAUDE.md  CONSOLE_ERRORS_AUDIT.md  Caddyfile  DASHBOARD_ENHANCEMENT_IMPLEMENTATION.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DESIGN.md  EISENHOWER_IMPLEMENTATION.md  FEATURE_VERIFICATION_REPORT.md  FULLPROOF_AUDIT.md  Frontend (Angular)  HTTP_CACHING.md  HTTP_CACHING_CHECKLIST.md  HTTP_CACHING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MY_WORK_TIMELINE_IMPLEMENTATION.md  PHASE-3.3-HTTP-CACHING.md  PHASE-3.5-COMPLETION-REPORT.md  README.md  RESEARCH-F.md  RESEARCH-H1H2.md  RESEARCH.md  SECURITY-AUDIT.md  SECURITY-HARDENING-3.4.md  TASK.md  TASKS.md  TASK_GROUPS_IMPLEMENTATION.md  TESTING-SETUP.md  TESTING_SUMMARY.md  TODO.md  TODOS.md  board-context-menu.md  comp.md  (+10 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.fast  Dockerfile.fast.dockerignore  backend-coverage.txt  backend-test-results.txt  docker-entrypoint.sh
backend/.sqlx/: query-00598606b3200ff7cb39d5b10932fca2517b191a35280b3bd6d2ebead07ee816.json  query-011a76b167ac314c9e02fb7c4e4718ade6fbefb8a4e8b09b4d88634191986581.json  query-0284d90c4baabb1051b0d18d73f31a8ec12fd8e11d09df84d8f035b58342cdaf.json  query-041d73fc728b0c81bd5b33747838e201b92564f9dca604d724d29742d6e96f67.json  query-04fa23b0164f6773f168138f7db43f0603e7d46ac1bb779b38f60f250faf0939.json  query-051d2f0c77abf8b1a517245b37410dc9753c157a4b0a96ef11412a4caae82377.json  query-060ae7fac04f76e3e387114da15bd0922f4dff575d4d64a8e9dadc3a7714dc85.json  query-06947392d3ed85b3b51323bfbc01c1c32d511658bc536bea9bff1816c60341c1.json  query-0734fe2ceea213519495935b9f001d0ee0583f2e25bd5b7f801e9b59031d8cff.json  query-09c4d43ad690394502a25915b21cb24f56a8ed2abe238ea66ceb7d581e7d3063.json  query-0b4119a90eba24c702b7364e6c4291004fb65a0ae145d0ecc436dea33e4c6808.json  query-0d0692252c7d14e7f863eefd57b3d897818da454e6583c7c3c321a34f7f874ab.json  query-11dfbc48e3e567f269f040a68c5acafd315d9f66404bbb8159b85b319969217f.json  query-12579091c84a306c1fcbd104a218f25cd726b3807fb240022bb5c36d69aba3fc.json  query-12776e23a9fa60d2960482e88053063d1cc39ee9c23fdcd87c02611f3ec6be33.json  query-12b48d49e89c59e9bebaedcb6b0bef4b38f0c95d80d747507fddf74a9a8755c4.json  query-13c35d84efd43ba90d1d39fd42d65c0c086945387f0bab7c827d24c367a285b0.json  query-13d12230bb8130f9ae636670a12e239c724df665f192c73054ae9a933d106993.json  query-14062fc2911c1dfad1d1604ccbfd4a1d9436b6c1ae8740b24464bb886dc032be.json  query-146b4296d201f2613fcd6888c6cd60bd48ba8ed7cf59a5ee9f43e8116a2a5156.json  query-149689708d487fb199bdd87e511b1ed7083c641b0fc2b0f1225500235a4934bf.json  query-1589dd4b7fed50eb00ebb1275f234d614dc2f6782cf5e488003427843ad22669.json  query-16b9d15f9645bf6a3bc025dada45791ed36c73fa8d8d6c6b3a1948cfe95f1272.json  query-16e160d677ac0d4c1e83eca3c397392e20bb437cfae386679405a1ba3cb74465.json  query-171fc544b7961c16037b199a1afe91ed7940de2f42f7fab75abf803579966fb5.json  query-18eb7a7428bf4dacc5f45e79b466ea398bbfcc617f726f7cf75dd37e29a3c4b5.json  query-1a198c23dd82e9a3a97e7bf731d67442df4cdbaeacdd25cca95537ce86a0379e.json  query-1a7e7ce50b9f6e651f9d1d8dbdc6a49c3f817c3c9534f8eccaa4ac7be8d84406.json  query-1aaab4cead9c5021f0074bd764820808dcab5626c744c32624f36ef00f00222e.json  query-1c8b2e8b62775bb042629a6a1b887121c8a0cc8084b5506245450223732ea11d.json  query-1c8e98b69793deefb504461b86c5ad8257de951151569fe677158e9094ba509b.json  query-1cf440a38f90b589924b82545d932ef6fa269bfae9be9f2a9ee9715ed1a3085c.json  query-1d0d654989efad74f831755e4d2c77c0acdb573e8a8e58c7fcc0074ccb20cc1f.json  query-1d6a7b005be3a6531c6644fac7f37e9577835d389060f593d899893c81d067a4.json  query-1ed94224bb9d549b30176baea651da0529ec06c37e415a5eaccfc38e76eb6975.json  query-1f2455148f00f0c9d7cc3d17e824ff148e46770ed1df98dde95e303e22326841.json  query-2076cf74595619f980501ac47141a889553f93af587c24eb8ac558ad01001c12.json  query-2089bd5ec4c95729550d00d92e5a12ef1cc5cbff2652eab3656dbd49c81d80de.json  query-2139e86ed4c17574cbeff3b80a36d42d3d8d4babef0592076381c160f6fa64b5.json  query-226a36faef4211c6b4993f4a1b119aaa52d717a775480000c8286c306536b1c3.json  (+231 more)
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  errors.rs  jobs.rs  main.rs  router.rs  state.rs  test_helpers.rs
backend/crates/api/src/extractors/: auth.rs  auth.spec.rs  mod.rs  strict_json.rs
backend/crates/api/src/middleware/: audit.rs  auth.rs  cache_headers.rs  csrf.rs  metrics_middleware.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs  tenant.rs
backend/crates/api/src/routes/: activity_log.rs  admin_audit.rs  admin_trash.rs  admin_users.rs  archive.rs  attachment.rs  audit_queries.rs  auth.rs  auth_password.rs  auth_profile.rs  auth_session.rs  auth_tests.rs  automation.rs  automation_templates.rs  batch_my_tasks.rs  board.rs  board_share.rs  board_types.rs  bulk_ops.rs  charts.rs  column.rs  comments.rs  common.rs  cron.rs  custom_field.rs  dashboard.rs  dependency.rs  eisenhower.rs  export.rs  favorites.rs  filter_presets.rs  health.rs  import.rs  import_export.rs  integration_tests.rs  internal_metrics.rs  invitation.rs  issue.rs  labels.rs  metrics.rs  (+63 more)
backend/crates/api/src/services/: activity_log.rs  app_metrics.rs  cache.rs  http_cache.rs  http_cache.spec.rs  mod.rs
backend/crates/api/src/ws/: batch_handler.rs  handler.rs  messages.rs  mod.rs  pubsub_relay.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: jwt.rs  lib.rs  password.rs  rbac.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs  tenant.rs  test_helpers.rs
backend/crates/services/: Cargo.toml
backend/crates/services/src/: audit.rs  board_templates.rs  broadcast.rs  lib.rs  minio.rs  novu.rs  presence.rs  project_templates.rs  sample_board.rs  sample_data.rs  sample_project.rs  trash_bin.rs
backend/crates/strict-dto/: Cargo.toml
backend/crates/strict-dto-derive/: Cargo.toml
backend/crates/strict-dto-derive/src/: lib.rs
backend/crates/strict-dto/src/: lib.rs
backend/scripts/: docker-entrypoint.sh  init-db.sh
(+1366 files in other folders)
