[workspace]
members = ["crates/api", "crates/db", "crates/auth", "crates/services"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
sha2 = "0.10"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "=0.4.38", features = ["serde"] }  # Exact version compatible with sqlx and Rust 1.85

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TypeScript generation
ts-rs = { version = "10", features = ["serde-json-impl", "chrono-impl", "uuid-impl"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Concurrency
dashmap = "6"

# S3/MinIO using rust-s3 (lightweight, stable, compatible with Rust 1.85)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }

# Regex
regex = "1"
once_cell = "1"

# Pin transitive dependencies to versions compatible with Rust 1.85
# These are pulled in by sqlx, chrono, rust-s3, and other deps but have released
# versions requiring Rust 1.88 which doesn't exist yet
time = "=0.3.36"
home = "=0.5.9"
