[workspace]
members = ["crates/api", "crates/db", "crates/auth", "crates/services"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
sha2 = "0.10"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TypeScript generation
ts-rs = { version = "10", features = ["serde-json-impl", "chrono-impl", "uuid-impl"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Environment
dotenvy = "0.15"

# Concurrency
dashmap = "6"

# S3/MinIO
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Regex
regex = "1"
once_cell = "1"
