[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/auth",
    "crates/services",
    "crates/strict-dto",
    "crates/strict-dto-derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
totp-lite = "2"
data-encoding = "2"
rand = "0.9"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TypeScript generation
ts-rs = { version = "10", features = ["serde-json-impl", "chrono-impl", "uuid-impl"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Environment
dotenvy = "0.15"

# Concurrency
dashmap = "6"

# S3/MinIO
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

# URL parsing
url = "2"

# Hex encoding
hex = "0.4"

# Regex
regex = "1"
once_cell = "1"

# Sentry error tracking
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "reqwest", "rustls"] }
sentry-tower = { version = "0.47", features = ["http"] }

# Metrics (Prometheus)
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Strict-JSON DTO contract
strict-dto = { path = "crates/strict-dto" }
strict-dto-derive = { path = "crates/strict-dto-derive" }

# Testing
mockall = "0.13"
rstest = "0.25"
proptest = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
return_self_not_must_use = "allow"
single_match_else = "allow"
implicit_hasher = "allow"
used_underscore_binding = "allow"
items_after_statements = "allow"
unreadable_literal = "allow"
uninlined_format_args = "allow"
