[package]
name = "taskflow-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "taskflow-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# Workspace deps
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
dashmap.workspace = true
aws-sdk-s3.workspace = true
sha2.workspace = true
futures-util = "0.3"

# Regex
regex.workspace = true
once_cell.workspace = true

# Local crates
taskflow-db = { path = "../db" }
taskflow-auth = { path = "../auth" }
taskflow-services = { path = "../services" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
mockall = { workspace = true }
axum-test = "16"
tower = { version = "0.5", features = ["util"] }
