[package]
name = "taskbolt-api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "taskbolt-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# Workspace deps
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
reqwest.workspace = true
dotenvy.workspace = true
dashmap.workspace = true
aws-sdk-s3.workspace = true
sha2.workspace = true
hmac.workspace = true
totp-lite.workspace = true
data-encoding.workspace = true
rand.workspace = true
futures-util = "0.3"

# Hex encoding
hex.workspace = true

# Regex
regex.workspace = true

# HTML sanitization
ammonia = "4.1.2"

# Error tracking
sentry.workspace = true
sentry-tower.workspace = true

# Metrics (Prometheus)
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Local crates
taskbolt-db = { path = "../db" }
taskbolt-auth = { path = "../auth" }
taskbolt-services = { path = "../services" }
strict-dto.workspace = true
strict-dto-derive.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
mockall.workspace = true
rstest.workspace = true
proptest.workspace = true
