[package]
name = "taskflow-auth"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
password-hash.workspace = true

taskflow-db = { path = "../db" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
mockall.workspace = true
rstest.workspace = true
proptest.workspace = true
