[package]
name = "taskbolt-auth"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
password-hash.workspace = true
tokio = { workspace = true, features = ["rt"] }

taskbolt-db = { path = "../db" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
mockall.workspace = true
rstest.workspace = true
proptest.workspace = true
