[package]
name = "taskbolt-db"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros"] }
url.workspace = true
strict-dto.workspace = true
strict-dto-derive.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
mockall.workspace = true
rstest.workspace = true
proptest.workspace = true
dotenvy.workspace = true
