[package]
name = "taskflow-services"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
redis.workspace = true
tokio.workspace = true
aws-sdk-s3.workspace = true
once_cell.workspace = true

taskflow-db = { path = "../db" }
taskflow-auth = { path = "../auth" }
