[package]
name = "taskbolt-services"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
redis.workspace = true
tokio.workspace = true
aws-sdk-s3.workspace = true

taskbolt-db = { path = "../db" }
base64 = "0.22.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
mockall.workspace = true
rstest.workspace = true
proptest.workspace = true
